--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,16 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
+    "immer": "^9.0.15",
+    "inner": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.6",
     "typescript": "~3.7.2"
   },
   "scripts": {
