--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-twitter",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,25 +13,27 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
-    "immer": "^9.0.15",
-    "inner": "^0.2.0",
+    "immer": "^7.0.9",
+    "json-server": "^0.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.2.0",
+    "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.6",
+    "reselect": "^4.0.0",
     "typescript": "~3.7.2"
   },
+  "proxy": "http://localhost:3004",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "json-server": "json-server --watch public/db.json --port 3004"
   },
   "eslintConfig": {
     "extends": "react-app"
