--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
     "css-loader": "3.4.2",
+    "date-fns": "^2.16.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -50,7 +51,9 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "json-server": "^0.16.1",
+    "medium-zoom": "^1.0.6",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -81,12 +84,12 @@
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
-  "proxy": "http://localhost:3004",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "json-server": "json-server --watch public/db.json --port 3004"
+    "json-server": "json-server --watch public/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
