--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,12 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.4"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "nodemon dist/server.js",
-    "dev": "nodemon server.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node server.ts",
     "nodemon": "nodemon"
   }
 }
